src/app/main-display/main-display.component.css
/*
body {
    width: 900px;
     text-align: center; 
    position: fixed;
    margin-left: 488px;
}
*/

.card{
    width: 300px;
    height: 750px;
    text-align: center;
    position: position;
/*    margin-left: 50px;*/
    padding: 80px 32px;
    background-color: #f4f4f4;
    align-items: center;
    border-radius: 15px;
	display: inline-block;
	margin-top: 1rem;
}

.mainCreateAccountCard{
	width: 700px;
/*    height: 750px;*/
/*    text-align: center;*/
    position: relative;
    margin-left: 81px;
    padding: 80px 32px;
/*    align-items: center;*/
    border-radius: 15px;
}

.btn {
    width: 167px;
    height: 48px;
    padding: 14px 0px;
    background-color: #FFD84F;
    border-radius: 5px;
    border: none;
    font-size: 18px;
    font-weight: bold;
    color:black;
}

.title{
    font-size: 22px;
    background-color:rgb(240, 240, 240);
    text-align: center;
    padding-top: 11.5px;
    padding-bottom: 11.5px;;
    width: 275px;
    height: 55px; 
    margin-right: 30px;
    border-radius: 5px;
}

.title, .more{
    display:inline-table;
}

.more{
    width:45px ;
}

.btn-default{
    width: 60px;
    font-size: 17px;
    font-weight: normal;
}

.cards{
    text-align:center; 
}

.interest-card{
    width: 180px;
    height: 98px;
    text-align: center;
    background-color: #FFF8E0;
    padding-block: 4%;
    border-radius: 10px;
    margin-right: 30px;
	margin-bottom: 3rem;
    display: inline-block;
}

.interest-card .room-name{
    font-size: 20px;
}

.course-card{
    width: 180px;
    height: 160px;
    text-align: center;
    background-color: #FFF8E0;
    padding-block: 6%;
    border-radius: 10px;
    margin-right: 30px;
	margin-bottom: 3rem;
    display: inline-block;
}

.course-card .room-name{
    font-size: 32px;
}

.course-card:hover, .interest-card:hover{
    background-color:#faedc1;
    cursor: pointer;
}

